Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77630

clang 7 outputs warnings about d_ptr in Multimedia and WebEngine

    XMLWordPrintable

Details

    Description

      Some classes shadow d_ptr from QObject.

      File: .../Qt/5.12.2/linux/clang7el7/include/QtMultimedia/qmediaobject.h, Line:
      96, Column: 26
      Message: non-static data member 'd_ptr' of 'QMediaObject' shadows member
      inherited from type 'QObject'
      
      File: .../Qt/5.12.2/linux/clang7el7/include/QtWebEngineWidgets/qwebenginedownl
      oaditem.h, Line: 153, Column: 51
      Message: non-static data member 'd_ptr' of 'QWebEngineDownloadItem'
      shadows member inherited from type 'QObject'
      
      File:
      .../Qt/5.12.2/linux/clang7el7/include/QtWebEngineWidgets/qwebenginepage.h,
      Line: 359, Column: 43
      Message: non-static data member 'd_ptr' of 'QWebEnginePage' shadows member
      inherited from type 'QObject'
      
      File:
      .../Qt/5.12.2/linux/clang7el7/include/QtWebEngineWidgets/qwebengineview.h,
      Line: 139, Column: 43
      Message: non-static data member 'd_ptr' of 'QWebEngineView' shadows member
      inherited from type 'QObject'
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            juri.valdmann Jüri Valdmann (Inactive)
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes